chore: changed vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "name": "apiUsers",
   "version": 2,
-  "publicKey": "true",
+  "public": true,
   "build": {
     "src": "./index.js",
     "use": "@vercel/node"
