--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
-  "name": "apiUsers",
+  "name": "api-mern",
   "version": 2,
   "public": true,
   "env": {
     "MONGODB_URI": "mongodb+srv://juliocesar:RATqL1y9lqS5o1pR@barbertestedb.aitz7v3.mongodb.net/?retryWrites=true&w=majority",
     "SECRET_KEY": "787e96de6e71d00b3aa0275c157e9c86"
   },
-  "build": {
-    "src": "./index.js",
-    "use": "@vercel/node"
-  },
+  "builds": [
+    {
+      "src": "./index.js",
+      "use": "@vercel/node"
+    }
+  ],
   "routes": [
     {
       "src": "src/routes/",
