--- a/vercel.json
+++ b/vercel.json
@@ -14,8 +14,8 @@
   ],
   "routes": [
     {
-      "src": "src/routes/",
-      "dest": "./index.js"
+      "src": "/(.*)",
+      "dest": "./src/routes/"
     }
   ]
 }
